<resources>
    <string name="app_name">FNDX</string>
    <string name="by_addictox">By - AddictoX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_news">Search News</string>
    <string name="settings">Settings</string>
    <string name="check_news">Check News</string>
    <string name="home">Live News</string>
    <string name="profile">Profile</string>
    <string name="heading">Heading</string>
    <string name="article">Article</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="published_date">Published Date</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="education">Education</string>
    <string name="top_stories">Top-Stories</string>
    <string name="most_recent_stories">Most Recent Stories</string>
    <string name="world">World</string>
    <string name="tech">Tech</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="all">All</string>
</resources>
