<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hsvFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_500"
    android:paddingHorizontal="6dp"
    android:paddingVertical="2dp"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="10dp"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/all"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <!--        <com.google.android.material.chip.Chip-->
        <!--            android:id="@+id/chipTopStories"-->
        <!--            android:text="@string/top_stories"-->
        <!--            app:chipBackgroundColor="@drawable/chip_filter_background"-->
        <!--            android:textColor="@drawable/chip_filter_text"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textAppearance="@style/TextAppearance"-->
        <!--            app:checkedIconEnabled="false"-->
        <!--            android:checkable="true"/>-->

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWorld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/world"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sports"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/tech"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/business"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/education"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEntertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/entertainment"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipScience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/science"
            android:textAppearance="@style/TextAppearance"
            android:textColor="@drawable/chip_filter_text"
            app:checkedIconEnabled="false"
            app:chipBackgroundColor="@drawable/chip_filter_background" />

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>

