<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/imgProfilePic"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_action_profile"
                app:tint="@color/secondary_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_below="@+id/imgProfilePic"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgProfilePic"
                android:textSize="24sp"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"
                android:enabled="false"
                android:text="Addicto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_below="@+id/etFirstName"/>

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etFirstName"
                android:textSize="24sp"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"
                android:enabled="false"
                android:text="X"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_below="@+id/etLastName"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etLastName"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:enabled="false"
                android:text="ABC@addictox.com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_below="@+id/etEmail"/>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:enabled="false"
                android:text="9090909090"/>

            <TextView
                android:id="@+id/txtNewsPref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="News Preference"
                android:layout_below="@+id/etPhone"/>

            <include layout="@layout/chip_group_filter"
                android:layout_below="@+id/txtNewsPref"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginVertical="5dp" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
